chore(database): integrate ConfigModule and update PrismaService logging

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,5 +28,6 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "noFallthroughCasesInSwitch": false
-  }
+  },
+  "exclude": ["node_modules", "dist", "test", "**/*spec.ts"]
 }
