--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "passport-local": "^1.0.0",
     "pino-http": "^10.0.0",
     "pino-pretty": "^11.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.1",
