chore(release): update branch name from master to main in release configuration

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,5 +1,5 @@
 {
-  "branches": ["master", { "name": "develop", "prerelease": "beta" }],
+  "branches": ["main", { "name": "develop", "prerelease": "beta" }],
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
