--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "ioredis": "^5.3.2",
     "joi": "^17.13.3",
     "nestjs-pino": "^4.5.0",
+    "nestjs-zod": "^4.0.0",
     "pino-http": "^10.0.0",
     "pino-pretty": "^11.0.0",
     "reflect-metadata": "^0.2.2",
