--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,12 @@ DATABASE_URL=postgresql://postgres:postgres@localhost:5432/kime_db?schema=public
 # Example with auth: redis://username:password@localhost:6379
 REDIS_URL=redis://:redis@localhost:6379
 
+# JWT Authentication
+# Secret used to sign JWT tokens (required in production)
+JWT_SECRET=your-jwt-secret-change-in-production
+# Token expiration (e.g. 7d, 24h, 60m)
+JWT_EXPIRES_IN=7d
+
 # ============================================
 # Optional: Redis Individual Configuration
 # (Only used if REDIS_URL is not provided)
