--- a/package.json
+++ b/package.json
@@ -43,13 +43,13 @@
     "@nestjs/swagger": "^11.2.5",
     "@nestjs/terminus": "^11.0.0",
     "@prisma/client": "^5.20.0",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "ioredis": "^5.3.2",
     "joi": "^17.13.3",
     "nestjs-pino": "^4.5.0",
     "nestjs-zod": "^4.0.0",
-    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pino-http": "^10.0.0",
@@ -57,8 +57,7 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.1",
-    "zod": "^3.23.8",
-    "bcryptjs": "^2.4.3"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.11",
@@ -68,18 +67,14 @@
     "@semantic-release/exec": "^7.1.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.0",
-    "@types/passport-jwt": "^4.0.1",
-    "@types/passport-local": "^1.0.38",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
-    "@types/passport-google-oauth20": "^2.0.14",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.2",
     "is-ci": "^4.1.0",
     "jest": "^30.0.0",
     "jest-junit": "^16.0.0",
-    "jest-mock-extended": "^4.0.0",
     "lefthook": "^1.7.9",
     "prisma": "^5.20.0",
     "source-map-support": "^0.5.21",
